Create images and styles folder and move appropriate files in there accordingly. Update links in index.html and main.css

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <title>Google</title>
-        <link href="main.css" rel="stylesheet" type="text/css">
-        <link rel="shortcut icon" href="google_logo.ico">
+        <link href="styles/main.css" rel="stylesheet" type="text/css">
+        <link rel="shortcut icon" href="images/google_logo.ico">
     </head>
     <body>
         <main>
@@ -17,7 +17,7 @@
             </ul>
         </nav>
         <div class="content">
-            <img src="googlelogo.png">
+            <img src="images/googlelogo.png">
             <div class="searchbox">
                 <input type="text" id="text-input">
                 <div class="mic"></div> 
